src/test/ui/parser/issue-17718-const-mut.stderr
error: const globals cannot be mutable
  --> $DIR/issue-17718-const-mut.rs:4:1
   |
LL | mut //~ ERROR: const globals cannot be mutable
   | ^^^
   |
   = help: did you mean to declare a static?

error: aborting due to previous error

